@@ -1,3 +1,9 @@
+2009-01-15  Alberto Garcia  <agarcia@igalia.com>
+
+	* src/hildon-picker-dialog.c (_hildon_picker_dialog_set_selector):
+	Don't check whether the new selector is NULL: it cannot be.
+	Hold a reference to the selector while doing the replacement.
+
 2009-01-15  Claudio Saavedra  <csaavedra@igalia.com>
 
 	* src/hildon-picker-dialog.c: (_hildon_picker_dialog_set_selector): Remove
